src/compiler/snapshots/isa__compiler__parser__tests__idents-24.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"emodule\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "emodule",
                        span: SpanData { file_id: 0, start: 0, end: 7 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 7 },
        ty: (),
    },
)
