src/compiler/snapshots/isa__compiler__parser__tests__idents-25.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"self\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "self",
                        span: SpanData { file_id: 0, lo: 0, hi: 4 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 4 },
        ty: (),
    },
)
