src/compiler/snapshots/isa__compiler__parser__tests__idents-4.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"ifs\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "ifs",
                        span: SpanData { file_id: 0, lo: 0, hi: 3 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 3 },
        ty: (),
    },
)
