src/compiler/snapshots/isa__compiler__parser__tests__idents-8.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"aint\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "aint",
                        span: SpanData { file_id: 0, start: 0, end: 4 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 4 },
        ty: (),
    },
)
