src/compiler/snapshots/isa__compiler__parser__tests__idents.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"_i\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "_i",
                        span: SpanData { file_id: 0, start: 0, end: 2 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 2 },
        ty: (),
    },
)
